--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "d3": "^4.4.0",
     "d3-dsv": "^1.0.3",
+    "d3-scale": "^1.0.4",
+    "d3-time-format": "^2.0.3",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-dropzone": "^3.7.3",
