--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.8.4"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "d3": "^4.4.0",
     "d3-dsv": "^1.0.3",
     "d3-scale": "^1.0.4",
