--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "d3-scale": "^1.0.4",
     "d3-time-format": "^2.0.3",
     "react": "^15.4.1",
+    "react-datepicker": "^0.40.0",
     "react-dom": "^15.4.1",
     "react-dropzone": "^3.7.3",
     "react-measure": "^1.4.5",
